# api_challenge

./: .gitignore  Dockerfile  README.md  pyproject.toml
api_challenge/: __init__.py  __main__.py  middlewares.py  read_model.py  routes.py  schemas.py  settings.py
api_challenge/api/: __init__.py  model_predict.py
catboost_info/: learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
model_environments/: logistic_model.pkl  requirements.txt  xgboost_fI_model.pkl  xgboost_model.pkl
tests/: test_api_challenge.py
