[tool.poetry]
name = "api_challenge"
version = "0.1.0"
description = ""
authors = ["jose <jose.poblete€alumnos.usm.cl>"]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.92.0"
uvicorn = "^0.20.0"
cloudpickle = "^2.2.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^23.1.0"

[tool.poetry.scripts]
serve = "api_challenge.__main__:serve"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
